<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.wayhome.ui.main.MainViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:layout_above="@+id/button_group"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:srcCompat="@drawable/logo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/My.Headline3"
                android:text="@string/app_name"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_group"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:paddingBottom="12dp"
            android:paddingHorizontal="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/Theme.MyMy.RegisterButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/layout_1_1_login_button_text"
                app:iconPadding="18dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_button"
                style="@style/Theme.MyMy.RegisterButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/layout_1_1_signup_button_text" />


        </LinearLayout>
    </RelativeLayout>
</layout>